--- a/back/.env
+++ b/back/.env
@@ -3,7 +3,7 @@ PORT=8000
 MONGO_USERNAME=eran
 MONGO_PASSWORD=QXOvthJGGQxNIKio
 MONGO_HOST=cluster0.nqtunna.mongodb.net/
-# SERVER_TOKEN_EXPIRETIME=3600
-# SERVER_HOSTNAME=
-# SERVER_TOKEN_ISSUER=coolIssuer
-# SERVER_TOKEN_SECRET 
+SERVER_TOKEN_EXPIRETIME=3600
+SERVER_HOSTNAME=localhost
+SERVER_TOKEN_ISSUER=coolIssuer
+SERVER_TOKEN_SECRET=epicuresecretkey
